--- a/6-扩展/6-04【数据结构和算法-数据结构】.md
+++ b/6-扩展/6-04【数据结构和算法-数据结构】.md
@@ -454,6 +454,14 @@ public static void inorderTraversal(TreeNode root) {
 
 ## 5.3 B+树
 
+# 第六章 堆
+
+堆是一种叫做完全二叉树的数据结构，可以分为大顶堆，小顶堆，而堆排序就是基于这种结构而产生的一种程序算法。堆排序的平均时间复杂度为 Ο(nlogn)。
+
+- 大顶堆：每个节点的值都大于或等于其子节点的值，在堆排序算法中用于升序排列；
+
+- 小顶堆：每个节点的值都小于或等于其子节点的值，在堆排序算法中用于降序排列；
+
 # 第六章 哈希表
 
 哈希法又称散列法、杂凑法以及关键字地址计算法等，相应的表称为哈希表。这种方法的基本思想是：首先在元素的关键字*k*和元素的存储位置*p*之间建立一个对应关系*f*，使得*p=f(k)*，*f*称为哈希函数。
