--- a/6-扩展/6-04【数据结构和算法-算法】.md
+++ b/6-扩展/6-04【数据结构和算法-算法】.md
@@ -348,7 +348,7 @@ int test() {
 
 # 第二章 十大排序算法
 
-冒泡选择插入、希尔归并快排、堆计数桶基数。
+<!-- 冒泡选择插入、希尔归并快排、堆计数桶基数 -->
 
 排序算法可以分为内部排序和外部排序，内部排序是数据记录在内存中进行排序，而外部排序是因排序的数据很大，一次不能容纳全部的排序记录，在排序过程中需要访问外存。
 
@@ -388,7 +388,7 @@ public static void main(String[] args) {
 
 冒泡排序还有一种优化算法，就是立一个 flag，当在一趟序列遍历中元素没有发生交换，则证明该序列已经有序。但这种改进对于提升性能来说并没有什么太大作用。
 
-冒泡排序最快的时候是：输入的数据都是正序时。冒泡排序最慢的时候是：输入的数据都是反序时。
+冒泡排序最快的时候是：输入的数	据都是正序时。冒泡排序最慢的时候是：输入的数据都是反序时。
 
 算法步骤如下：
 
@@ -570,8 +570,8 @@ public static void shellSort(int[] arr) {
 
 ```java
 public class MergeSort {
-    // 归并排序-分解
-    public static int[] sort(int[] arr) {
+    // 归并排序-分解/拆分
+    public static int[] split(int[] arr) {
 
         int length = arr.length;
         if (length < 2) {
@@ -584,13 +584,15 @@ public class MergeSort {
         int[] left = Arrays.copyOfRange(arr, 0, middle);
         int[] right = Arrays.copyOfRange(arr, middle, length);
 
-        return merge(sort(left), sort(right));
+        return merge(split(left), split(right));
     }
 
     // 归并排序-合并
     private static int[] merge(int[] left, int[] right) {
         int[] result = new int[left.length + right.length];
         int i = 0;
+        
+        // 从左右数组中选择小的元素放入到结果数组，并移动下标到下一位置。
         while (left.length > 0 && right.length > 0) {
             if (left[0] <= right[0]) {
                 result[i++] = left[0];
@@ -606,6 +608,50 @@ public class MergeSort {
             System.arraycopy(left, 0, result, i, left.length);
         } else {
             System.arraycopy(right, 0, result, i, right.length);
+        }
+
+        return result;
+    }
+}
+```
+
+```java
+public class MergeSort {    
+    // 归并排序-分解/拆分
+    public static int[] split(int[] arr) {
+        int len = arr.length;
+
+        // 递归结束条件
+        if (len < 2) {
+            return arr;
+        }
+
+        int mid = len / 2;
+        int[] left = Arrays.copyOfRange(arr, 0, mid);
+        int[] right = Arrays.copyOfRange(arr, mid, len);
+        return merge(split(left), split(right));
+    }
+
+    // 归并排序-合并
+    public static int[] merge(int[] left, int[] right) {
+        int leftLen = left.length, rightLen = right.length;
+        int i = 0, j = 0, k = 0;
+        int[] result = new int[leftLen + rightLen];
+
+        // 从左右数组中选择小的元素放入到结果数组，并移动下标到下一位置。
+        while (i < leftLen && j < rightLen) {
+            if (left[i] < right[j]) {
+                result[k++] = left[i++];
+            } else {
+                result[k++] = right[j++];
+            }
+        }
+
+        // 将另一序列剩下的所有元素依次放入结果数组。
+        if (i == leftLen) {
+            System.arraycopy(right, j, result, k, rightLen - j);
+        } else {
+            System.arraycopy(left, i, result, k, leftLen - i);
         }
 
         return result;
@@ -630,6 +676,7 @@ public class MergeSort {
 ```java
 public static void quickSort(int[] arr, int left, int right) {
     if (left < right) {
+        // 定义左右指针以及基准点
         int i = left, j = right, base = arr[i];
 
         while (i < j) {
@@ -663,23 +710,22 @@ public static void quickSort(int[] arr, int left, int right) {
 
 算法步骤如下：
 
-1. 初始化堆，将待排序序列构转换成堆，并维护成大顶堆。从最后一个非叶子节点开始判断其子节点是否比该节点值大，如果大那么就更换。
+1. 初始化堆。从最后一个非叶子节点(`arr.length/2-1`)开始判断其子节点是否比该节点值大，如果大就更换值。
 
    ![](..\图片\6-04【数据结构和算法-算法】\2-7-1初始化堆.jpg)
 
-2. 此时，整个序列的最大值就是堆顶的根节点。
+2. 从最后一个非叶子节点循环判断完毕，此时，整个堆的根节点就是数组的最大值。
 
    ![](..\图片\6-04【数据结构和算法-算法】\2-7-2堆顶最大值.jpg)
 
-3. 接着要进行交换数据，从而使数组成为一个真正的有序数组。将其与末尾元素进行交换，此时末尾就为最大值。
-
-4. 然后将剩余n-1个元素重新构造成一个堆，这样会得到n个元素的次小值。如此反复执行，便能得到一个有序序列了。
+3. 接着将堆的根节点与末尾节点交换数据，从而使末尾节点为最大值。然后将剩余`n-1`个元素看成一个新的堆，如此反复执行，便能得到一个有序序列了。
 
    ![](..\图片\6-04【数据结构和算法-算法】\2-7-3交换数据.jpg)
 
+
 ```java
 public static void heapSort(int[] arr) {
-    // 将待排序序列构造成一个大顶堆，从最后一个非叶子节点开始调整
+    // 将待排序序列看成一个堆，从最后一个非叶子节点(arr.length / 2 - 1)开始调整，将最大的元素调整至根节点
     for (int i = arr.length / 2 - 1; i >= 0; i--) {
         adjustHeap(arr, i, arr.length);
     }
@@ -690,14 +736,15 @@ public static void heapSort(int[] arr) {
         arr[0] = tmp;
         adjustHeap(arr, 0, j);
     }
-
 }
 
+// 从最后一个非叶子节点(arr.length / 2 - 1)开始调整，将最大的元素调整至根节点
 public static void adjustHeap(int[] arr, int i, int length) {
     // 记录当前要调整的元素
     int tmp = arr[i];
+    // 这里循环是因为有可能置换的节点下面还有子节点，所以仍然需要判断。例如图二
     for (int k = i * 2 + 1; k < length; k = k * 2 + 1) {
-        // 把当前节点的左子节点和右子节点的数据作比较，调整二者中较大的节点
+        // 把当前节点的左子节点和右子节点的数据作比较，tmp要与二者中较大的节点调整。k记录二者中较大节点的下标
         if (k + 1 < length && arr[k] < arr[k + 1]) {
             k++;
         }
@@ -729,17 +776,13 @@ public static void adjustHeap(int[] arr, int i, int length) {
 
 虽然计数排序看上去很强大，但是它存在两大局限性：
 
-1. 当数列最大最小值差距过大时，并不适用于计数排序
+1. 当数列最大最小值差距过大时，并不适用于计数排序。比如给定 20 个随机整数，范围在 0 到 1 亿之间，此时如果使用计数排序的话，就需要创建长度为 1 亿的数组，不但严重浪费了空间，而且时间复杂度也随之升高。
 
-   比如给定 20 个随机整数，范围在 0 到 1 亿之间，此时如果使用计数排序的话，就需要创建长度为 1 亿的数组，不但严重浪费了空间，而且时间复杂度也随之升高。
+2. 当数列元素不是整数时，并不适用于计数排序。如果数列中的元素都是小数，比如 3.1415，或是 0.00000001 这样子，则无法创建对应的统计数组，这样显然无法进行计数排序。
 
-2. 当数列元素不是整数时，并不适用于计数排序
-
-   如果数列中的元素都是小数，比如 3.1415，或是 0.00000001 这样子，则无法创建对应的统计数组，这样显然无法进行计数排序。
 
 ```java
 public static void countingSort(int[] arr) {
-
     // 获取到待排序数组的最大值
     int maxValue = arr[0];
     for (int value : arr) {
@@ -748,7 +791,7 @@ public static void countingSort(int[] arr) {
         }
     }
 
-    // 创建数组并为其赋值
+    // 创建bucket数组并为其赋值
     int[] bucket = new int[maxValue + 1];
     for (int value : arr) {
         bucket[value]++;
@@ -767,9 +810,7 @@ public static void countingSort(int[] arr) {
 
 ## 2.9 桶排序
 
-桶排序是计数排序的升级版。它利用了函数的映射关系，高效与否的关键就在于这个映射函数的确定。为了使桶排序更加高效，我们需要做到这两点：在额外空间充足的情况下尽量增大桶的数量、使用的映射函数能够将输入的 N 个数据均匀的分配到 K 个桶中
-
-同时，对于桶中元素的排序，选择何种比较排序算法对于性能的影响至关重要。
+桶排序是计数排序的升级版。它利用了函数的映射关系，高效与否的关键就在于这个映射函数的确定。为了使桶排序更加高效，我们需要做到这两点：在额外空间充足的情况下尽量增大桶的数量、使用的映射函数能够将输入的 N 个数据均匀的分配到 K 个桶中。
 
 算法步骤如下：
 
@@ -777,6 +818,8 @@ public static void countingSort(int[] arr) {
 2. 从左到右遍历待排序序列，把每个元素都放到对应的桶中。
 3. 对每个不是空的桶进行排序。
 4. 依次取出所有桶中的元素放回原序列。
+
+![](D:\Java\笔记\图片\6-04【数据结构和算法-算法】\2-9.png)
 
 ```JAVA
 public class BucketSort implements IArraySort {
@@ -791,6 +834,7 @@ public class BucketSort implements IArraySort {
         return bucketSort(arr, 5);
     }
 
+    // 3, 7, 1, 10, 6, 4, 9
     private int[] bucketSort(int[] arr, int bucketSize) throws Exception {
         if (arr.length == 0) {
             return arr;
@@ -806,6 +850,7 @@ public class BucketSort implements IArraySort {
             }
         }
 
+        // 确定桶的数量
         int bucketCount = (int) Math.floor((maxValue - minValue) / bucketSize) + 1;
         int[][] buckets = new int[bucketCount][0];
 
@@ -941,6 +986,8 @@ public class RadixSort implements IArraySort {
 - 基数排序：根据键值的每位数字来分配桶；
 - 计数排序：每个桶只存储单一键值；
 - 桶排序：每个桶存储一定范围的数值；
+
+## 2.11 鸽巢排序、鸡尾酒排序
 
 # 第三章 常用算法
 
