--- a/1-Java基础/1-03【包装类、泛型】.md
+++ b/1-Java基础/1-03【包装类、泛型】.md
@@ -503,7 +503,7 @@ public void testWildCards(Collection<?> collection){
 
 上面的代码中，方法内的参数是被无限定通配符修饰的 `Collection` 对象，它隐略地表达了一个意图或者可以说是限定，那就是 `testWidlCards()` 这个方法内部无需关注 `Collection` 中的真实类型，因为它是未知的。所以我们只能调用 `Collection` 中与类型无关的方法。
 
-![](..\图片\1-03【包装类、泛型】\2-1.png)
+<img src="..\图片\1-03【包装类、泛型】\2-1.png" />
 
 我们可以看到，当 `<?>`存在时，`Collection` 对象丧失了 `add()` 方法的功能，编译器不通过。再看如下代码：
 
@@ -747,7 +747,7 @@ for ( Method m:methods ){
 
 理解类型擦除有利于我们绕过开发当中可能遇到的雷区，同样理解类型擦除也能让我们绕过泛型本身的一些限制。比如下面的代码：
 
-![](..\图片\1-03【包装类、泛型】\2-2.png)
+<img src="..\图片\1-03【包装类、泛型】\2-2.png" />
 
 正常情况下，因为泛型的限制，编译器不让最后一行代码编译通过，因为类似不匹配，但是，基于对类型擦除的了解，利用反射，我们可以绕过这个限制。
 
