--- a/1-Java基础/1-04【异常、断言、单元测试】.md
+++ b/1-Java基础/1-04【异常、断言、单元测试】.md
@@ -20,7 +20,7 @@
 
 出现异常，不要紧张，把异常的简单类型名，拷贝到API中去查。
 
-![](..\图片\1-04【异常、断言、单元测试】\1异常分类.png)
+<img src="..\图片\1-04【异常、断言、单元测试】\1异常分类.png" />
 
 Throwable体系：
 
@@ -39,7 +39,7 @@ Throwable中的常用方法如下：
 
 我们平常说的异常就是指Exception，因为这类异常一旦出现，我们就要对代码进行更正，修复程序。
 
-![](..\图片\1-04【异常、断言、单元测试】\1异常分类.png)
+<img src="..\图片\1-04【异常、断言、单元测试】\1异常分类.png" />
 
 异常(Exception)的分类：
 
@@ -785,7 +785,7 @@ class Zi extends Fu {
 
 ## 2.7 自定义异常
 
-![](..\图片\1-04【异常、断言、单元测试】\1异常分类.png)
+<img src="..\图片\1-04【异常、断言、单元测试】\1异常分类.png" />
 
 为什么需要自定义异常类：我们说了java中不同的异常类，分别表示着某一种具体的异常情况，那么在开发中总是有些异常情况是JDK没有定义好的，此时我们根据自己业务的异常情况来定义异常类。例如年龄负数问题，考试成绩负数问题等等。
 
@@ -1035,7 +1035,7 @@ Maven导入依赖
 1. 黑盒测试：不需要写代码，给输入值，看看程序是否能够输出期望的值。
 2. 白盒测试：需要写代码，关注程序具体的执行流程。(Junit单元测试就是白盒测试)。
 
-![](..\图片\1-04【异常、断言、单元测试】\4Junit.png)
+<img src="..\图片\1-04【异常、断言、单元测试】\4Junit.png" />
 
 Maven和Gradle创建项目后的框架是有一个test目录的，该目录就是让我们编写单元测试的代码的。
 
