--- a/1-Java基础/1-06【并发1-多线程】.md
+++ b/1-Java基础/1-06【并发1-多线程】.md
@@ -490,7 +490,7 @@ public static void main(String[] args) throws InterruptedException {
 
 示意图如下：
 
-![](D:\Java\笔记\图片\1-06【并发】\1-1.png)
+<img src="..\图片\1-06【并发】\1-1.png" />
 
 上面是单个线程的join方法调用，下面我们来看一下多个线程的join方法调用：
 
@@ -545,7 +545,7 @@ public class Demo01 {
 
 那么问题来了？假如我们调整一下`t1.join();`和`t2.join();`的执行顺序后，主线程还需要等待多少时间呢？答案就是仍然2秒，不会有任何变化。
 
-![](D:\Java\笔记\图片\1-06【并发】\1-2.png)
+<img src="..\图片\1-06【并发】\1-2.png" />
 
 ### 3.3.4 interrupt
 
@@ -698,7 +698,7 @@ sleep 不释放锁、释放cpu。join 释放锁、抢占cpu。yiled 不释放锁
 
 正确思路如下：线程的`isInterrupted()`方法可以取得线程的打断标记，如果线程在睡眠`sleep`期间被打断，打断标记虽然被重置为`false`，但是`sleep`期间被打断会抛出异常，我们据此手动设置打断标记为`true`；如果是在程序正常运行期间被打断的，那么打断标记就被自动设置为`true`。
 
-<img src="D:\Java\笔记\图片\1-06【并发】\1-3.png"/>
+<img src="..\图片\1-06【并发】\1-3.png"/>
 
 代码实现如下：
 
@@ -815,7 +815,7 @@ public class Demo02 {
 
 五种状态的划分主要是从操作系统的层面进行划分的
 
-![](D:\Java\笔记\图片\1-06【并发】\1-4线程5种状态.png)
+<img src="..\图片\1-06【并发】\1-4线程5种状态.png" />
 
 1. 初始状态，仅仅是在语言层面上创建了线程对象`Thead thread = new Thead();`还未与操作系统线程关联。
 2. 可运行状态，也称就绪状态。指该线程已经被创建，与操作系统相关联，等待cpu给它分配时间片就可运行。
@@ -835,7 +835,7 @@ public class Demo02 {
 
 这是从 Java API 层面来描述的，我们主要研究的就是这种。根据 `Thread.State` 枚举，分为六种状态。状态转换详情图：[地址](https://www.jianshu.com/p/ec94ed32895f) 
 
-![](D:\Java\笔记\图片\1-06【并发】\1-5线程6种状态.png)
+<img src="..\图片\1-06【并发】\1-5线程6种状态.png" />
 
 | 线程状态                | 导致线程状态发生的条件                                       |
 | ----------------------- | ------------------------------------------------------------ |
@@ -934,7 +934,7 @@ public class Demo01 {
 
 ## 2.8 线程状态转换详解
 
-![](D:\Java\笔记\图片\1-06【并发】\1-5线程6种状态.png)
+<img src="..\图片\1-06【并发】\1-5线程6种状态.png" />
 
 假设有线程 `Thread t`
 
@@ -1116,7 +1116,7 @@ putstatic i 				// 将修改后的值存入静态变量i
 
 而 Java 的内存模型如下，完成静态变量的自增，自减需要在主存和线程内存中进行数据交换：
 
-![](D:\Java\笔记\图片\1-06【并发】\1-6-3.png)
+<img src="..\图片\1-06【并发】\1-6-3.png" />
 
 如果是单线程以上 8 行代码是顺序执行（不会交错）没有问题：
 
@@ -1132,7 +1132,7 @@ isub 				// 线程1-自减 线程内i=0
 putstatic i 		// 线程1-将修改后的值存入静态变量i 静态变量i=0
 ```
 
-![](D:\Java\笔记\图片\1-06【并发】\1-6.png)
+<img src="..\图片\1-06【并发】\1-6.png" />
 
 但多线程下这 8 行代码可能交错运行：
 
@@ -1150,7 +1150,7 @@ putstatic i 		// 线程1-将修改后的值存入静态变量i 静态变量i=1
 putstatic i 		// 线程2-将修改后的值存入静态变量i 静态变量i=-1
 ```
 
-![](D:\Java\笔记\图片\1-06【并发】\1-6-1.png)
+<img src="..\图片\1-06【并发】\1-6-1.png" />
 
 出现正数的情况：
 
@@ -1166,7 +1166,7 @@ putstatic i 			// 线程2-将修改后的值存入静态变量i 静态变量i=-1
 putstatic i 			// 线程1-将修改后的值存入静态变量i 静态变量i=1
 ```
 
-![](D:\Java\笔记\图片\1-06【并发】\1-6-2.png)
+<img src="..\图片\1-06【并发】\1-6-2.png" />
 
 ## 3.2 synchronized
 
@@ -1618,7 +1618,7 @@ public static void test1() {
 
 每个线程调用 `test1()` 方法时，会在每个线程创建一份栈帧，每个线程的栈帧内存中创建局部变量i，因此不存在共享。
 
-![](D:\Java\笔记\图片\1-06【并发】\1-7.png)
+<img src="..\图片\1-06【并发】\1-7.png" />
 
 局部变量的引用则有一些不同：
 
@@ -1674,7 +1674,7 @@ Exception in thread "Thread1" java.lang.IndexOutOfBoundsException: Index: 0, Siz
 
 分析的原因如下：无论哪个线程中的 method2 引用的都是同一个对象中的 list 成员变量，method3 与 method2 分析相同。
 
-![](D:\Java\笔记\图片\1-06【并发】\1-8.png)
+<img src="..\图片\1-06【并发】\1-8.png" />
 
 可以将list修改成局部变量，那么就不会有上述问题了
 
@@ -1698,7 +1698,7 @@ class ThreadSafe {
 
 分析如下：list 是局部变量，每个线程调用时会创建其不同实例，没有共享。而 method2和method3的参数是从 method1 中传递过来的，与 method1 中引用同一个对象。
 
-![](D:\Java\笔记\图片\1-06【并发】\1-9.png)
+<img src="..\图片\1-06【并发】\1-9.png" />
 
 接下来来思考一下访问修饰符修改后的影响：如果把 method2 和 method3 的方法修改为 public 会不会导致线程安全问题？
 
