--- a/2-DB数据库/2-03【存储引擎、索引】.md
+++ b/2-DB数据库/2-03【存储引擎、索引】.md
@@ -7,9 +7,9 @@
 
 - 连接层
 
-   最上层是一些客户端和链接服务，包含本地sock 通信和大多数基于客户端/服务端工具实现的类似于 TCP/IP的通信。
+   最上层是一些客户端和链接服务，包含本地 socket 通信和大多数基于客户端/服务端工具实现的类似于 TCP/IP的通信。
 
-   主要完成一些类似于连接处理、授权认证、及相关的安全方案。在该层上引入了线程池的概念，为通过认证安全接入的客户端提供线程。同样在该层上可以实现基于SSL的安全链接。服务器也会为安全接入的每个客户端验证它所具有的操作权限。
+   主要完成一些类似于连接处理、授权认证及相关的安全方案。在该层上引入了线程池的概念，为通过认证安全接入的客户端提供线程。同样在该层上可以实现基于SSL的安全链接。服务器也会为安全接入的每个客户端验证它所具有的操作权限。
 
 - 服务层 
 
@@ -257,25 +257,20 @@ MySQL中除了支持B+Tree索引，还支持一种索引类型---Hash索引。
 
 **为什么 InnoDB 存储引擎选择使用 B+Tree 索引结构？**
 
-- **B+ 树的磁盘读写代价更低**
-
+- B+ 树的磁盘读写代价更低。
   B+ 树的数据都集中在叶子节点，分支节点只负责指针（索引）；B 树的分支节点既有指针也有数据 。这将导致B+ 树的层高会小于B 树的层高，也就是说B+ 树平均的Io次数会小于B 树。
-
-- **B+ 树的查询效率更加稳定**
-
+  
+- B+ 树的查询效率更加稳定
   B+ 树的数据都存放在叶子节点，故任何关键字的查找必须走一条从根节点到叶子节点的路径。所有关键字的查询路径相同，每个数据查询效率相当。
-
-- **B+树更便于遍历**
-
+  
+- B+树更便于遍历
   由于B+树的数据都存储在叶子结点中，分支结点均为索引，遍历只需要扫描一遍叶子节点即可；B树因为其分支结点同样存储着数据，要找到具体的数据，需要进行一次中序遍历按序来搜索。
-
-- **B+树更擅长范围查询**
-
+  
+- B+树更擅长范围查询
   B+树叶子节点存放数据，数据是按顺序放置的双向链表。B树范围查询只能中序遍历。Hash索引不支持范围匹配和排序操作。
-
-- **B+ 树占用内存空间小**
-
-  B+ 树索引节点没有数据，比较小。在内存有限的情况下，相比于B树索引可以加载更多B+ 树索引。 
+  
+- B+ 树占用内存空间小
+B+ 树索引节点没有数据，比较小。在内存有限的情况下，相比于B树索引可以加载更多B+ 树索引。 
 
 
 
