--- a/6-扩展/6-04【数据结构和算法-算法】.md
+++ b/6-扩展/6-04【数据结构和算法-算法】.md
@@ -448,16 +448,16 @@ public static void selectionSort(int[] arr) {
 ```
 
 ```java
-public static void selectionSort(int[] array) {
+public static void SelectSortPro(int[] array) {
     int length = array.length;
-    for (int i = 0; i < length; i++) {
+    for (int i = 0; i < length - 1; i++) {
         int minIndex = i;
         for (int j = i + 1; j < length; j++) {
-            if (arr[j] < arr[minIndex]) {
+            if (arr[minIndex] > arr[j]) {
                 minIndex = j;
             }
         }
-        if (i != minIndex) {
+        if (minIndex != i) {
             int tmp = arr[i];
             arr[i] = arr[minIndex];
             arr[minIndex] = tmp;
@@ -500,6 +500,8 @@ public static void insertSort(int[] arr) {
 
 ## 2.4 希尔排序
 
+<!-- gap(Growth Acceleration Programme) 增长加速计划 -->
+
 希尔排序，也称递减增量排序算法，是插入排序的一种更高效的改进版本。但希尔排序是非稳定排序算法。
 
 希尔排序是基于插入排序的以下两点性质而提出改进方法的：
@@ -528,22 +530,23 @@ public static void shellSort(int[] arr) {
     int length = arr.length;
 
     // 第一层for循环用来控制增量。初始增量为length/2，缩小增量为gap=gap/2
-    for (int grap = length / 2; grap >= 1; grap /= 2) {
+    for (int gap = length / 2; gap >= 1; gap /= 2) {
         // 这里进行插入排序。将i赋值为grap由插入排序的性质决定，需要将第一个值看成已经排好序的序列
-        for (int i = grap; i < length; i++) {
+        // i++是需要将每一组都进行插入排序，不能是i+=gap
+        for (int i = gap; i < length; i++) {
             // 记录待插入数字
             int tmp = arr[i];
-            int j = i - grap;
+            int j = i - gap;
 
             // 从已经排好序的序列依次循环，找到需要插入位置的索引
             while (j >= 0 && arr[j] > tmp) {
-                arr[j + grap] = arr[j];
-                j -= grap;
+                arr[j + gap] = arr[j];
+                j -= gap;
             }
 
             // 插入值
-            if (j != (i - grap)) {
-                arr[j + grap] = tmp;
+            if (j != (i - gap)) {
+                arr[j + gap] = tmp;
             }
         }
     }
@@ -699,6 +702,21 @@ public static void quickSort(int[] arr, int left, int right) {
 }
 ```
 
+```java
+public static void main(String[] args) {
+    private static final int LENGTH = 10;
+
+    int[] arr = new int[LENGTH];
+    Random random = new Random();
+    for (int i = 0; i < LENGTH; i++) {
+        arr[i] = random.nextInt(100);
+    }
+    System.out.println("排序前：" + Arrays.toString(arr));
+    quickSort(arr, 0, 9);
+    System.out.println("排序后：" + Arrays.toString(arr));
+}
+```
+
 ## 2.7 堆排序
 
 堆是一种叫做完全二叉树的数据结构，可以分为大顶堆，小顶堆，而堆排序就是基于这种结构而产生的一种程序算法。堆排序的平均时间复杂度为 Ο(nlogn)。
@@ -710,7 +728,7 @@ public static void quickSort(int[] arr, int left, int right) {
 
 算法步骤如下：
 
-1. 初始化堆。从最后一个非叶子节点(`arr.length/2-1`)开始判断其子节点是否比该节点值大，如果大就更换值。
+1. 初始化堆。从最后一个非叶子节点(`arr.length/2-1`)开始判断其子节点是否比该节点值大，如果大就更换。
 
    ![](..\图片\6-04【数据结构和算法-算法】\2-7-1初始化堆.jpg)
 
@@ -734,15 +752,18 @@ public static void heapSort(int[] arr) {
         int tmp = arr[j];
         arr[j] = arr[0];
         arr[0] = tmp;
+        // 之前已经将整个数组构造成了大顶堆，后面末尾元素与首元素进行交换
+        // 所以0号索引不符合大顶堆的条件，所以让其与左右子树交换值，最后会重新构造成大顶堆
         adjustHeap(arr, 0, j);
     }
 }
 
-// 从最后一个非叶子节点(arr.length / 2 - 1)开始调整，将最大的元素调整至根节点
+// arr[i]节点与其左右子节点树进行调整
 public static void adjustHeap(int[] arr, int i, int length) {
     // 记录当前要调整的元素
     int tmp = arr[i];
     // 这里循环是因为有可能置换的节点下面还有子节点，所以仍然需要判断。例如图二
+    // k是其左子节点的索引下标
     for (int k = i * 2 + 1; k < length; k = k * 2 + 1) {
         // 把当前节点的左子节点和右子节点的数据作比较，tmp要与二者中较大的节点调整。k记录二者中较大节点的下标
         if (k + 1 < length && arr[k] < arr[k + 1]) {
@@ -756,6 +777,7 @@ public static void adjustHeap(int[] arr, int i, int length) {
             break;
         }
     }
+    // 因为中间说不定有子树在调整，所以这个赋值需要等到最后
     arr[i] = tmp;
 }
 ```
@@ -815,11 +837,11 @@ public static void countingSort(int[] arr) {
 算法步骤如下：
 
 1. 设置几个数组作为空桶，每个桶的大小在 5~10 之间性能最优。
-2. 从左到右遍历待排序序列，把每个元素都放到对应的桶中。
+2. 从左到右遍历待排序序列，把每个元素使用映射函数（可以使用插入算法向桶中插入元素，也可以不使用插入算法等到遍历完之后再排序）放到对应的桶中。
 3. 对每个不是空的桶进行排序。
 4. 依次取出所有桶中的元素放回原序列。
 
-![](..\图片\6-04【数据结构和算法-算法】\2-9.png)
+![](..\图片\6-04【数据结构和算法-算法】\2-10.png)
 
 ```java
 public static void bucketsort(int[] arr) {
@@ -827,9 +849,8 @@ public static void bucketsort(int[] arr) {
         return;
     }
 
-    // 映射函数的一部分
-    int bucketSize = 5;
-
+    // 映射函数的一部分，这个值视情况而定。值变大那么创建的桶的个数便会减小。
+    int bucketSize = 10;
     // 获取数组最大值以及最小值，用于求桶的个数
     int minValue = arr[0];
     int maxValue = arr[0];
@@ -840,6 +861,7 @@ public static void bucketsort(int[] arr) {
             maxValue = value;
         }
     }
+    
     // 确定桶的数量
     int bucketCount = (int) Math.floor((maxValue - minValue) / bucketSize) + 1;
     // 创建桶
@@ -854,6 +876,7 @@ public static void bucketsort(int[] arr) {
         int index = (int) Math.floor((arr[i] - minValue) / bucketSize);
         // 得到该桶
         ArrayList<Integer> list = buckets.get(index);
+        
         // 接下来使用插入排序将值放到该桶中
         // 判断是否从来没有添加过
         if (list == null) {
@@ -862,6 +885,7 @@ public static void bucketsort(int[] arr) {
             int j = list.size() - 1;
             // 找到需要插入的位置的索引
             while (j >= 0 && list.get(j) > arr[i]) {
+                // 如果直接向后移的话会报错，所以这里在list里面添加，等新增一个节点之后就可以set了
                 if (j + 1 >= list.size()) {
                     list.add(list.get(j));
                 } else {
@@ -893,13 +917,14 @@ public static void bucketsort(int[] arr) {
 
 基数排序是一种非比较型整数排序算法，其原理是将整数按位数切割成不同的数字，然后按每个位数分别比较。由于整数也可以表达字符串（比如名字或日期）和特定格式的浮点数，所以基数排序也不是只能使用于整数。
 
-![img](..\图片\6-04【数据结构和算法-算法】\2-10radixSort.gif)
+![](..\图片\6-04【数据结构和算法-算法】\2-10radixSort.gif)
 
 ```java
 // 基数排序
 public static void RadixSort(int[] arr) {
-    // 弄十个桶来存储数据，数据都是放到队列里面的
+    // 弄十个桶（每个位只有10种可能 0~9）来存储数据，数据都是放到队列queue = new LinkedList()里面的
     List<LinkedList<Integer>> list = new ArrayList<>(10);
+    // 给每个桶放进去队列，因为要保证先进先出，所以这里用队列
     for (int i = 0; i < 10; i++) {
         list.add(new LinkedList<>());
     }
@@ -925,6 +950,7 @@ public static void RadixSort(int[] arr) {
     int mod = 10;
     // 被除数
     int dev = 1;
+    // 循环最大值的位数次
     for (int i = 0; i < len; i++, dev *= 10, mod *= 10) {
         // 将他们都放到桶中
         for (int num : arr) {
