--- a/2-DB数据库/2-06【日志、主从复制、分库分表】.md
+++ b/2-DB数据库/2-06【日志、主从复制、分库分表】.md
@@ -1,6 +1,168 @@
-# 第一章 日志
+# 第九章 MySQL工具
 
-## 1.1 错误日志
+### 9.1 MySQL
+
+该mysql不是指mysql服务，而是指mysql的客户端工具。
+
+```sql
+语法 ：
+	mysql [options] [database]
+选项 ：
+    -u, --user=name #指定用户名
+    -p, --password[=name] #指定密码
+    -h, --host=name #指定服务器IP或域名
+    -P, --port=port #指定连接端口
+    -e, --execute=name #执行SQL语句并退出
+```
+
+`-e`选项可以在Mysql客户端执行SQL语句，而不用连接到MySQL数据库再执行，对于一些批处理脚本，这种方式尤其方便。
+
+```sh
+# -e选项
+mysql -u用户名 –p密码 数据库名称 -e "执行语句"		# 模板
+mysql -uroot -p1234 linxuan -e "select * from course" 	# 示例
+```
+
+### 9.2.2 mysqladmin
+
+mysqladmin 是一个执行管理操作的客户端程序。可以用它来检查服务器的配置和当前状态、创建并删除数据库等。
+
+```sql
+通过帮助文档查看选项：
+	mysqladmin --help
+```
+
+```sql
+语法:
+	mysqladmin [options] command ...
+选项:
+    -u, --user=name #指定用户名
+    -p, --password[=name] #指定密码
+    -h, --host=name #指定服务器IP或域名
+    -P, --port=port #指定连接端口
+```
+
+```sh
+# 示例
+mysqladmin -uroot -p1234 create 'test01'		# 创建数据库
+mysql -uroot -p1234 -e 'show databases'			# 查看所有数据库
+mysqladmin -uroot -p1234 drop 'test01'			# 删除数据库
+```
+
+### 9.2.3  mysqlbinlog
+
+由于服务器生成的二进制日志文件以二进制格式保存，所以如果想要检查这些文本的文本格式，就会使用到mysqlbinlog 日志管理工具。
+
+```sql
+语法 ：
+	mysqlbinlog [options] log-files1 log-files2 ...
+选项 ：
+    -d, --database=name 指定数据库名称，只列出指定的数据库相关操作。
+    -o, --offset=# 忽略掉日志中的前n行命令。
+    -r,--result-file=name 将输出的文本格式日志输出到指定文件。
+    -s, --short-form 显示简单格式， 省略掉一些信息。
+    --start-datatime=date1 --stop-datetime=date2 指定日期间隔内的所有日志。
+    --start-position=pos1 --stop-position=pos2 指定位置间隔内的所有日志。
+```
+
+```sh
+# mysqlbinlog日志默认在 /var/lib/mysql中 我们要进去这个文件夹
+mysqlbinlog -s binlog.000001		# 查看binlog.000001 简略查看
+```
+
+### 9.2.4 mysqlshow
+
+mysqlshow 客户端对象查找工具，用来很快地查找存在哪些数据库、数据库中的表、表中的列或者索引。
+
+```sql
+语法 ：
+	mysqlshow [options] [db_name [table_name [col_name]]]
+选项 ：
+    --count 显示数据库及表的统计信息（数据库，表 均可以不指定）
+    -i 显示指定数据库或者指定表的状态信息
+```
+
+```sh
+#查询test库中每个表中的字段，及行数
+mysqlshow -uroot -p1234 test --count
+#查询test库中book表的详细情况
+mysqlshow -uroot -p1324 test book --count
+# 查看test数据库中book表的状态信息
+mysqlshow -uroot -p1324 test book -i
+```
+
+### 9.2.5 mysqldump
+
+mysqldump 客户端工具用来备份数据库或在不同数据库之间进行数据迁移。备份内容包含创建表，及插入表的SQL语句。
+
+```sql
+语法 ：
+    mysqldump [options] db_name [tables]
+    mysqldump [options] --database/-B db1 [db2 db3...]
+    mysqldump [options] --all-databases/-A
+连接选项 ：
+    -u, --user=name 指定用户名
+    -p, --password[=name] 指定密码
+    -h, --host=name 指定服务器ip或域名
+    -P, --port=# 指定连接端口
+输出选项：
+    --add-drop-database 在每个数据库创建语句前加上 drop database 语句
+    --add-drop-table 在每个表创建语句前加上 drop table 语句 , 默认开启 ; 不开启 (--skip-add-drop-table)
+    -n, --no-create-db 不包含数据库的创建语句
+    -t, --no-create-info 不包含数据表的创建语句
+    -d --no-data 不包含数据
+    -T, --tab=name 自动生成两个文件：一个.sql文件，创建表结构的语句；一个.txt文件，数据文件
+```
+
+* **备份db01数据库：**
+
+  ```sh
+  mysqldump -uroot -p1234 db01 > db01.sql 		 
+  ```
+
+  备份出来的数据包含：
+
+  - 删除表的语句
+  - 创建表的语句
+  - 数据插入语句
+
+  如果我们在数据备份时，不需要创建表，或者不需要备份数据，只需要备份表结构，都可以通过对应的参数来实现。
+
+* **备份db01数据库中的表数据，不备份表结构(-t)**
+
+  ```sh
+  mysqldump -uroot -p1234 -t db01 > db01.sql
+  ```
+
+  打开 db02.sql ，来查看备份的数据，只有insert语句，没有备份表结构。
+
+* **将db01数据库的表的表结构与数据分开备份(-T)**
+
+  ```sh
+  mysqldump -uroot -p1234 -T /root db01 score
+  ```
+
+  执行上述指令，会出错，数据不能完成备份，原因是因为我们所指定的数据存放目录/root，MySQL认为是不安全的，需要存储在MySQL信任的目录下。那么，哪个目录才是MySQL信任的目录呢，可以查看一下系统变量 secure_file_priv 。
+
+### 9.2.6 mysqlimport/source
+
+mysqlimport 是客户端数据导入工具，用来导入mysqldump 加 -T 参数后导出的文本文件。
+
+```sql
+语法 ：
+	mysqlimport [options] db_name textfile1 [textfile2...]
+示例 ：
+	mysqlimport -uroot -p2143 test /tmp/city.txt
+```
+
+如果需要导入sql文件,可以使用mysql中的source 指令 :
+
+```sql
+语法 ：
+	source /root/xxxxx.sql
+```
+
+# 第一章 日志
 
 错误日志是 MySQL 中最重要的日志之一，它记录了当 mysqld 启动和停止时，以及服务器在运行过程中发生任何严重错误时的相关信息。当数据库出现任何故障导致无法正常使用时，建议首先查看此日志。
 
