--- a/6-扩展/6-00【通用基础知识】.md
+++ b/6-扩展/6-00【通用基础知识】.md
@@ -489,6 +489,70 @@ public static void main(String[] args) {
 
 # 第七章 智力面试题
 
+智力面试题如下：
+
+1. 水桶装水（两个无刻度的水桶，一个可以装6L水，一个可以装5L水，如何在桶里装入3L的水？）
+2. 选出最快的马（25匹马，5个赛道，每次只能同时有5匹马跑，最少比赛几次选出前三名的马？）
+3. 找出有毒的药（1000瓶药水中1瓶有毒，毒发时间24小时，需要多少只老鼠能在24小时后试出毒药？）
+4. 
+
+**水桶装水（两个无刻度的水桶，一个可以装6L水，一个可以装5L水，如何在桶里装入3L的水？）**
+
+答：只要这两个水壶的容量互质（即两个数没有共同的质因子），我们就能找出一种倒水的顺序组合，量出1到2个水壶容量总和（含）之间的任意水量。6的质因子是2、3、6，5的质因子是5，所以可以找出来。
+
+1. 先将5L的桶装满，将5L的桶的水倒入6L的桶中。这时5L的桶是空的，6L的桶中有5L的水。
+
+2. 再将5L的桶装满，倒入6L的桶中。这时5L的桶有4L的水，6L的桶是满的。
+
+3. 将6L的桶中的水倒掉，5L的桶的水倒入6L的桶中。这时5L的桶是空的，6L的桶中有4L的水。
+
+4. 将5L的桶装满，倒入6L的桶中。这时5L的桶还有3L的水，6L的桶是满的。
+
+```apl
+5L水杯      6L水杯
+ 0            0    # 两个水桶为空
+ 5            0    # 将5L的桶装满
+ 0            5    # 将5L的桶的水倒入6L的桶中。这时5L的桶是空的，6L的桶中有5L的水。
+ 5            5    # 再将5L的桶装满
+ 4            6    # 倒入6L的桶中。这时5L的桶有4L的水，6L的桶是满的。
+ 4            0    # 将6L的桶中的水倒掉
+ 0            4    # 5L的桶的水倒入6L的桶中。这时5L的桶是空的，6L的桶中有4L的水。
+ 5            4    # 将5L的桶装满
+ 3            6    # 倒入6L的桶中。这时5L的桶还有3L的水，6L的桶是满的。
+```
+
+```apl
+# 如果换成5L和3L的，那么就需要现在5L的桶中灌水了
+3L水杯      5L水杯
+ 0            0
+ 3            0
+ 0            3
+ 3            3
+ 1            5
+ 1            0
+ 0         	  1
+ 3            1
+ 0            4
+```
+
+**选出最快的马（25匹马，5个赛道，每次只能同时有5匹马跑，最少比赛几次选出前三名的马？）**
+
+**答案**
+
+> 大概思想就是先分5组跑，跑出每组第一名，将每组第一名放到一起跑，找出25匹马的第一名，然后找出2、3名，一共需要7次。
+>
+> 前五次：将25匹马放到5个赛道比赛，找出每个赛道的第一名。假设A1、B1、C1、D1、E1分别为每组的第一名，如下图：
+>
+> ![](D:\Java\笔记\图片\6-00【通用基础知识】\18896506-09703bc0691d64b7.webp)
+>
+> 第六次：将A1、B1、C1、D1、E1放到一个赛道上找出第一名，假设为A1，其他四名分别为B1、C1、D1、E1。这时第一名已经找到了，还需找到二、三名。因为C1的速度比D1和E1的速度快，所以赛道D和赛道E的所有马都被淘汰了。有机会成为二、三名的马为A2、A3、B1、B2、C1这五匹马，即前五名在这个区域，并且第一名为A1。
+>
+> ![](D:\Java\笔记\图片\6-00【通用基础知识】\18896506-6883871edf3a7c0d.webp)
+>
+> 第七次：将A2、A3、B1、B2、C1放到一个赛道找出前两名，再加上A1，这就找到前三名了。
+
+
+
 ## 11. 蓝色眼睛的人
 
 有个岛上住着一群人，有一天来了个游客，定了一条奇怪的规矩：所有蓝眼睛的人都必须尽快离开这个岛。每晚8点会有一个航班离岛。每个人都看得见别人眼睛的颜色，但不知道自己的（别人也不可以告知）。此外，他们不知道岛上到底有多少人是蓝眼睛的，只知道至少有一个人的眼睛是蓝色的。所有蓝眼睛的人要花几天才能离开这个岛？
@@ -611,67 +675,6 @@ public static void main(String[] args) {
 > 只需要你先拿，第一次拿4个，以后看对方拿的个数，根据对方拿的个数，保证每轮对方和你拿的加起来是6就行了，其实就是保证你拿到4，还要拿到10,16…直到94。
 
 
-
-## 1. 水桶装水
-
-两个无刻度的水桶，一个可以装6L水，一个可以装5L水，如何在桶里装入3L的水？
-
-**答案**
-
-> 1. 先将5L的桶装满，将5L的桶的水倒入6L的桶中。这时5L的桶是空的，6L的桶中有5L的水。
->
-> 2. 再将5L的桶装满，倒入6L的桶中。这时5L的桶有4L的水，6L的桶是满的。
->
-> 3. 将6L的桶中的水倒掉，5L的桶的水倒入6L的桶中。这时5L的桶是空的，6L的桶中有4L的水。
->
-> 4. 将5L的桶装满，倒入6L的桶中。这时5L的桶还有3L的水，6L的桶是满的。
->
->    5夸脱水杯      3夸脱水杯
->
->    0             		0
->
->    5             		0
->
->    2            		 3
->
->    2            		 0
->
->    0             		2
->
->    5            		 2
->
->    4          		   3
-
-**提示**
-
-> * 先往大的水桶里面装水
-
-**注意**
-
-> 注意，许多智力题其实都隐含数学或计算机科学的背景，这个问题也不例外。
->
-> 只要这两个水壶的容量互质（即两个数没有共同的质因子），我们就能找出一种倒水的顺序组合，量出1到2个水壶容量总和（含）之间的任意水量。
->
-> - 5的质因子是5本身
-> - 3的质因子是3
-
-## 2. 选出最快的马
-
-25匹马，5个赛道，每次只能同时有5匹马跑，最少比赛几次选出前三名的马？
-
-**答案**
-
-> 大概思想就是先分5组跑，跑出每组第一名，将每组第一名放到一起跑，找出25匹马的第一名，然后找出2、3名，一共需要7次。
->
-> 前五次：将25匹马放到5个赛道比赛，找出每个赛道的第一名。假设A1、B1、C1、D1、E1分别为每组的第一名，如下图：
->
-> ![](D:\Java\笔记\图片\6-00【通用基础知识】\18896506-09703bc0691d64b7.webp)
->
-> 第六次：将A1、B1、C1、D1、E1放到一个赛道上找出第一名，假设为A1，其他四名分别为B1、C1、D1、E1。这时第一名已经找到了，还需找到二、三名。因为C1的速度比D1和E1的速度快，所以赛道D和赛道E的所有马都被淘汰了。有机会成为二、三名的马为A2、A3、B1、B2、C1这五匹马，即前五名在这个区域，并且第一名为A1。
->
-> ![](D:\Java\笔记\图片\6-00【通用基础知识】\18896506-6883871edf3a7c0d.webp)
->
-> 第七次：将A2、A3、B1、B2、C1放到一个赛道找出前两名，再加上A1，这就找到前三名了。
 
 ## 3. 找出有毒的药
 
@@ -808,3 +811,57 @@ public static void main(String[] args) {
 > * 棋盘原本有32个黑格和32个白格。将对角角落上的两个方格（相同颜色）切掉，棋盘只剩下30个同色的方格和32个另一种颜色的方格。为方便论证起见，我们假定棋盘上剩下30个黑格和32个白格。
 >
 > - 放在棋盘上的每块骨牌必定会盖住一个白格和一个黑格。因此，31块骨牌正好盖住31个白格和31个黑格。然而，这个棋盘只有30个黑格和32个白格，所以，31块骨牌盖不住整个棋盘。
+
+## 10 抛硬币
+
+两个人玩抛硬币的游戏，谁先抛到正面就获胜。那么先抛的人获胜概率为（）。
+
+2/3  
+
+  第1把胜 1/2 （A正）
+
+
+  第2把胜 1/2 * 1/2 * 1/2 （A反B反A正） 
+
+  第n把胜 1/2^(2n-1) 
+
+  A胜的概论，就是上述概率之和。 
+
+  按等比数列求和公式，当 n 无穷大时，其值是 2/3。
+
+
+
+
+
+
+
+### 场景题以及智力题（可以通过google去搜索解决问题，锻炼搜索能力~）
+
+- 书籍
+  - 《数据密集型应用系统设计》
+- 场景题资源
+  - 面试系列 场景题与智力题收集
+    - https://zhuanlan.zhihu.com/p/359538568
+  - 写一个面试中场景题的总结
+    - https://blog.51cto.com/u_15076209/4244803
+  - 后端场景题
+    - https://blog.csdn.net/qq_37574623/article/details/117255234
+  - 面试场景题：如何设计一个排行榜？
+    - https://www.1024sou.com/article/783326.html
+  - 其他问题
+    - 假如有 10 亿个数，只有一个重复，内存只能放下 5 亿个数，怎么找到这个重复的数字？
+    - 如何设计一个秒杀系统（服务端、数据库、分布式）？分布式系统的设计？
+    - 有一个服务器专门接收大量请求，怎么设计？
+    - 如果让你自己设计 RPC 框架你会如何设计？
+    - 怎么快速出现一个 stackoverflow 错误？
+  - 大厂面试助手(十二)：场景和设计
+    - https://juejin.cn/post/6909437717596241927
+- 智力题资源
+  - 【盘点】面试中常常看见的智力题 烫
+    - https://www.nowcoder.com/discuss/262595
+  - 【智力题】大厂最爱问的智力题
+    - https://chowdera.com/2022/01/202201071409493219.html
+  - 互联网大厂最爱问的智力题总结（带详细答案） 烫
+    - https://www.nowcoder.com/discuss/754712?type=1&channel=-1&source_id=discuss_terminal_discuss_hot_nctrack
+
+### 简历编写
