--- a/6-扩展/6-04【数据结构和算法-数据结构】.md
+++ b/6-扩展/6-04【数据结构和算法-数据结构】.md
@@ -319,34 +319,11 @@ static final class Node {
 
 ## 5.1 二叉树
 
-二叉树：每个子节点只有两个节点的树，每个结点至多拥有两棵子树(即二叉树中不存在度大于2的结点)，并且，二叉树的子树有左右之分，其次序不能任意颠倒。顶上的叫根结点，两边被称作“左子树”和“右子树”。
+二叉树：每个子节点只有两个节点的树，每个结点至多拥有两棵子树(即二叉树中不存在度大于2的结点)。二叉树的子树有左右之分，其次序不能任意颠倒。顶上的叫根结点，两边被称作“左子树”和“右子树”。
 
-![](D:\Java\笔记\图片\6-04【数据结构和算法-数据结构】\3-1二叉树.png)
+二叉树五种形态：
 
-二叉查找树也称为有序二叉查找树，满足二叉查找树的一般性质，是指一棵空树具有如下性质：
-
-1. 任意节点左子树不为空,则左子树的值均小于根节点的值
-2. 任意节点右子树不为空,则右子树的值均大于于根节点的值
-3. 任意节点的左右子树也分别是二叉查找树
-4. 没有键值相等的节点
-
-二叉树又分为：完美二叉树，完全二叉树，完满二叉树
-
-### 5.1.1 完全二叉树/堆
-
-堆是一种叫做完全二叉树的数据结构，可以分为大顶堆，小顶堆，而堆排序就是基于这种结构而产生的一种程序算法。
-
-- 大顶堆：每个节点的值都大于或等于其子节点的值；
-
-- 小顶堆：每个节点的值都小于或等于其子节点的值；
-
-完美二叉树：又称为满二叉树，除了叶子节点之外的每一个节点都有两个孩子节点，每层都被完全填充
-
-![](D:\Java\笔记\图片\6-04【数据结构和算法-数据结构】\3-2完美二叉树.png)
-
-完全二叉树：除了最后一层之外的其他每一层都被完全填充，并且所有的节点都保持向左对齐
-
-![](D:\Java\笔记\图片\6-04【数据结构和算法-数据结构】\3-3完全二叉树.png)
+![](..\图片\6-04【数据结构和算法-数据结构】\3-1二叉树.png)
 
 二叉树中的遍历规则有如下三种：
 
@@ -354,113 +331,194 @@ static final class Node {
 - 中序遍历：所谓的中序遍历就是先访问左节点，再访问根节点，最后访问右节点，即左-根-右遍历
 - 后序遍历：所谓的后序遍历就是先访问左节点，再访问右节点，最后访问根节点。即左-右-根遍历
 
-一个二叉查找树是由n个节点随机构成，所以对于某些情况，二叉查找树会退化成一个有n个节点的线性链。
+二叉树又分为：完美二叉树，完全二叉树，完满二叉树
 
-### 5.1.1 求二叉树深度
+**完美二叉树**
 
-求二叉树深度：
+完美二叉树：又称为满二叉树，除了叶子节点之外的每一个节点都有两个孩子节点，每层都被完全填充
 
-```java
-static class TreeNode {
-    int val;
-    TreeNode left;
-    TreeNode right;
+![](..\图片\6-04【数据结构和算法-数据结构】\3-2完美二叉树.png)
 
-    public TreeNode(int val) {
-        this.val = val;
-    }
-}
-```
+**完全二叉树**
 
-```java
-// 递归求深度
-public static int treeDepth(TreeNode root) {
-    if (root == null) {
-        return 0;
-    }
-    // 计算左子树的深度
-    int left = treeDepth(root.left);
-    // 计算右子树的深度
-    int right = treeDepth(root.right);
-    // 树root的深度=路径最长的子树深度 + 1
-    return left >= right ? (left + 1) : (right + 1);
-}
-```
+完全二叉树：除了最后一层之外的其他每一层都被完全填充，并且所有的节点都保持向左对齐
 
-```java
-// 使用队列来实现	
-public int treeDepth2(TreeNode root) {
-    if (root == null) return 0;
+![](..\图片\6-04【数据结构和算法-数据结构】\3-3完全二叉树.png)
 
-    Queue<TreeNode> queue = new LinkedList<>();
-    queue.offer(root);
-    int res = 0, size = 0;
-    while (!queue.isEmpty()) {
-        size = queue.size();
-        while (size > 0) {
-            TreeNode poll = queue.poll();
-            if (poll.left != null) queue.offer(poll.left);
-            if (poll.right != null) queue.offer(poll.right);
-            size--;
-        }
-        res++;
-    }
-    return res;
-}
-```
+**完满二叉树**
 
-### 5.1.2 树的遍历
+## 5.2 堆/二叉堆
 
-中序遍历：左根右，inorderTraversal。
+二叉堆在完全二叉树的基础上，增加了节点取值的限制条件，所以它的数据结构就是完全二叉树。可以分为大顶堆/最大堆，小顶堆/最小堆，而堆排序就是基于这种结构而产生的一种程序算法。
 
-```java
-public static void inorderTraversal(TreeNode root) {
-    Deque<TreeNode> stack = new LinkedList<TreeNode>();
-    while (!stack.isEmpty() || root != null) {
-        while (root != null) {
-            stack.push(root);
-            root = root.left;
-        }
-        root = stack.pop();
-        System.out.println(root.val);
-        root = root.right;
-    }
-}
-```
+- 大顶堆/最大堆：每个节点的值都大于或等于其子节点的值，在堆排序算法中用于升序排列；
 
-前序遍历 (preorder traversal) - 中序遍历 (inorder traversal) - 后序遍历 (postorder traversal)
+- 小顶堆/最小堆：每个节点的值都小于或等于其子节点的值，在堆排序算法中用于降序排列；
 
 ## 5.2 BST二叉查找树
 
+二叉查找树（Binary Search Tree，BST）又名二叉搜索树，二叉排序树。具有下面这4个性质：
+
+1. 如果左子树不空则左子树上所有结点的值均小于或等于该结点的值
+2. 如果右子树不空则右子树上所有结点的值均大于或等于该结点的值
+3. 左右子树也分别为二叉查找树。
+4. 没有键值相等的节点。
+
+等于的情况一般只出现在左子树或右子树中的某一侧，二叉查找树中没有重复的节点。中序遍历二叉查找树，就会得到一个从小到大的序列，所以它也被称为二叉排序树。
+
+![](..\图片\6-04【数据结构和算法-数据结构】\3-4.png)
+
+一个二叉查找树是由n个节点随机构成，所以对于某些情况，二叉查找树会退化成一个有n个节点的线性链。
+
+## 5.4 AVL平衡二叉树
+
+平衡二叉树又名AVL树，平衡二叉查找树，平衡二叉搜索树。
+
+由前苏联的数学家 Adelse-Velskil 和 Landis 在 1962 年提出的高度平衡的二叉树，根据科学家的英文名也称为 AVL 树。常见的平衡树：AVL树、红黑树、Treap、伸展树、加权平衡树、2-3树、AA树、替罪羊树、节点大小平衡树。
+
+平衡二叉树的特点：
+
+- 可以是空树。
+- 假如不是空树，任何一个结点的左子树与右子树都是平衡二叉树，并且高度之差的绝对值不超过 1。
+
+假如一棵树的左右子树的高度之差超过1，如左子树的树高为2，右子树的树高为0，子树树高差的绝对值为2就打破了这个平衡。左右子树的高度差由平衡因子来记录。
+
+每当我们向平衡二叉树插入或者删除一个节点的时候都有可能导致失衡，所以这时候就需要进行失衡调整。平衡二叉树的失衡调整主要是通过旋转最小失衡子树来实现的。
+
+- 平衡因子：左子树的高度减去右子树的高度。由平衡二叉树的定义可知，平衡因子的取值只可能为0、1、-1，分别对应着左右子树等高，左子树比较高，右子树比较高。
+
+- 最小失衡子树：在新插入的结点向上查找，以第一个平衡因子的绝对值超过1的结点为根的子树称为最小不平衡子树。也就是说，一棵失衡的树，是有可能有多棵子树同时失衡的，我们只需要调整最小的不平衡子树，就能够将不平衡的树调整为平衡的树。
 
 
-## 5.2 红黑树
+在图7中。2结点（左子树树高-右子树树高）的绝对值=2。同理，3结点的平衡因子也为2。此时同时存在了两棵不平衡子树，而以3为根的树是最小的不平衡子树。我们只要将其以3为中心，将最小不平衡树向左旋转，即可得到平衡二叉树，如图8。
 
-红黑树本身就是一颗二叉查找树，将节点插入后，该树仍然是一颗二叉查找树。也就意味着，树的键值仍然是有序的。
+![](..\图片\6-04【数据结构和算法-数据结构】\3-7.png)
 
-红黑树的约束:
+我们使用连续的两个字母来表示平衡因子，以表示各种不同的情况。第一个字母表示最小不平衡子树根结点的平衡因子，第二个字母表示最小不平衡子树较高子树的根结点的平衡因子。使用L表示左子树较高，R表示右子树较高，E表示左右子树等高。
 
-- 节点可以是红色的或者黑色的
-- 根节点是黑色的
-- 叶子节点(特指空节点)是黑色的
-- 每个红色节点的子节点都是黑色的
-- 任何一个节点到其每一个叶子节点的所有路径上黑色节点数相同
+下面我们将对所有的失衡情况进行讨论。大致分为两大类，一左子树过高，二右子树过高。左子树过高的情况又有LL型、LE型、LR型，右子树过高的情况有RR型、RL型。
 
-红黑树的特点:
+**左子树过高LL型**
 
-​	速度特别快，趋近平衡树，查找叶子元素最少和最多次数不多于二倍
+在LL型的不平衡树中，我们首先找到最小不平衡子树，再以其根结点向右旋转。向右旋转后，相当于右边的子树树高增加了1，而左边的子树树高降低了1，而原本的树高之差为2，那么就能够将根的平衡因子就化为0。旋转之后：原来根结点的左孩子作为新的根结点。
+
+1. 将2作为根结点
+2. 将3作为2的右孩子
+3. 将2的右孩子作为3的左孩子（维护树的有序性，只是此处为NULL而已）
+
+![](..\图片\6-04【数据结构和算法-数据结构】\3-8.png)
+
+ **左子树过高LE型**
+
+插入的时候，是不会出现LE的这种情况的。只有在删除的时候才会出现。
+
+![](D:\Java\笔记\图片\6-04【数据结构和算法-数据结构】\3-9.png)
+
+假设这种情况存在：
+
+* 假设我们刚插入的元素是1，那么原来的树已经不是平衡树。不可能。
+* 假设我们刚插入的元素是3，那么原来的树也不是平衡树，也不可能。
+
+所以在插入的时候，不会出现LE的这种情况的。会在删除的情况中出现这种情况。同理，不可能出现RE的情况。
+
+**左子树过高LR型**
+
+对于LR，要分为两步进行旋。旋转之后：原来根结点的左孩子的右孩子作为新的根结点。第一步是以较高子树的根为中心向左旋转，第二部是以原树的根向右旋转。
+
+1. 将2的左子树作为1的右子树（维护树的有序性，只是此处为NULL而已）
+2. 将1作为2的左子树
+3. 将2作为3的左子树
+4. 这时候就成为了左子树过高LL型不平衡树。
+5. 将2作为根结点
+6. 将3作为2的右孩子
+7. 将2的右孩子作为3的左孩子（维护树的有序性，只是此处为NULL而已）
+
+![](..\图片\6-04【数据结构和算法-数据结构】\3-10.png)
+
+**右子树过高RR型**
+
+旋转的步骤如下。旋转之后为：原来根结点的右孩子作为新的根结点。
+
+1. 将2作为根结点
+2. 将1作为2的左孩子
+3. 将2的左孩子作为1的右孩子（维护树的有序性，只是此处为NULL而已）
+
+![](..\图片\6-04【数据结构和算法-数据结构】\3-11.png)
+
+**右子树过高RL型**
+
+与LR型类似，我们需要进行两次旋转。旋转之后：原来根结点的右孩子的左孩子作为新的根结点。第一步是以较高子树的根为中心向右旋转，第二部是以原树的根向左旋转。
+
+1. 将2作为1的右孩子
+2. 将3作为2的右孩子
+
+3. 将2的右孩子作为3的左孩子（维护树的有序性，只是此处为NULL而已）
+4. 此时就成为了右子树过高RR型不平衡树。
+5. 将2作为根结点
+6. 将1作为2的左孩子
+7. 将2的左孩子作为1的右孩子（维护树的有序性，只是此处为NULL而已）
+
+![](..\图片\6-04【数据结构和算法-数据结构】\3-12.png)
+
+**总结**
+
+1. 在所有的不平衡情况中，都是按照“寻找最小不平衡树”->“寻找所属的不平衡类别”->“根据4种类别进行固定化程序的操作”。
+2. LL、LR、RR、RL其实已经为我们提供了最后哪个结点作为新的根指明了方向。如LR型最后的根结点为原来的根的左孩子的右孩子，RL型最后的根结点为原来的根的右孩子的左孩子。
+3. 维护平衡二叉树，最麻烦的地方在于平衡因子的维护。
+
+## 5.2 R-B红黑树
+
+红黑树（Red-Black Tree，R-B Tree）：它一种特殊的二叉查找树。红黑树的每个节点上都有存储位表示节点的颜色，可以是红(Red)或黑(Black)。具有如下特性：
+
+* 每个节点或者是黑色，或者是红色。
+* 根节点是黑色**。**
+* 每个叶子节点（NIL）是黑色。这里叶子节点，是指为空（NIL或NULL）的叶子节点。
+* 任何相邻的两个节点不能同时为红色，也就是说每个红色节点的子节点都是黑色的。
+* 任何一个节点到其每一个叶子节点的所有路径上黑色节点数相同。确保没有一条路径会比其他路径长出俩倍。因而，红黑树是相对是接近平衡的二叉树。
+
+红黑树的特点：速度特别快，趋近平衡树，查找叶子元素最少和最多次数不多于二倍。
+
+![](..\图片\6-04【数据结构和算法-数据结构】\3-13红黑树.png)
+
+
+
+
+
+![](..\图片\6-04【数据结构和算法-数据结构】\3-6红黑树.png)
+
+## 5.4 tire树/字典树
+
+tire树又称字典树或前缀树，是一种有序的，用于统计排序和存储字符串的数据结构，它与二叉查找树不同，关键字不是直接保存在节点中，而是由节点在树中的位置决定。
+
+每个节点都代表了一个字符，从第一层孩子节点到某个标记的节点代表了存储的字符串。一般情况下不是所有的节点都有对应的字符串，只有叶子节点和部分内部节点进行了特殊的标记，才存储字符串。
+
+例如将这些字符串存储到字典树中，被标记为红色的节点代表存储了从根到该节点之间字符组成的字符串。
+
+![](D:\Java\笔记\图片\6-04【数据结构和算法-数据结构】\3-5字典树.png)
+
+一个节点的所有子孙都有相同的前缀，也就是这个节点对应的字符串，例如abc、abcd、abd都有相同的前缀ab，在字典树中它们有相同的祖先节点a和b。
+
+trie树的最大优点就是利用字符串的公共前缀，来减少存储空间与查询时间，从而最大限度地减少无谓的字符串比较，是非常高效的字符串查找数据结构，查找和插入字符串都可达到 O（1） 算法复杂度。
 
 ## 5.2 B树
 
+B树（Balanced-tree）：B树的英文名称为B-tree，译作B-树，因此B树就是B-树。B树是一种多叉路平衡查找树，相对于二叉树，B树每个节点可以有多个分支，即多叉。以一颗最大度数（max-degree）为5(5阶)的b-tree为例，那这个B树每个节点最多存储4个key，5 个指针。
+
+- 5阶的B树，每一个节点最多存储4个key，对应5个指针。
+- 一旦节点存储的key数量到达5，就会裂变，中间元素向上分裂。 
+- 在B树中，非叶子节点和叶子节点都会存放数据。
+
+![](..\图片\6-04【数据结构和算法-数据结构】\12-3.png)
+
 ## 5.3 B+树
 
-# 第六章 堆
+B+ 树是 B 树的一种变体：
 
-堆是一种叫做完全二叉树的数据结构，可以分为大顶堆，小顶堆，而堆排序就是基于这种结构而产生的一种程序算法。堆排序的平均时间复杂度为 Ο(nlogn)。
+* B 树的所有节点既存放键也存放数据，而 B+树只有叶子节点存放 key 和 data，其他内节点只存放 key。
+* B 树的叶子节点都是独立的，B+树的叶子节点有一条引用链指向与它相邻的叶子节点。
+* B 树的检索的过程相当于对范围内的每个节点的关键字做二分查找，可能还没有到达叶子节点，检索就结束了。而 B+树的检索效率就很稳定了，任何查找都是从根节点到叶子节点的过程，叶子节点的顺序检索很明显。
 
-- 大顶堆：每个节点的值都大于或等于其子节点的值，在堆排序算法中用于升序排列；
-
-- 小顶堆：每个节点的值都小于或等于其子节点的值，在堆排序算法中用于降序排列；
+![](..\图片\6-04【数据结构和算法-数据结构】\12-4.png)
 
 # 第六章 哈希表
 
