--- a/6-扩展/6-04【数据结构和算法-算法】.md
+++ b/6-扩展/6-04【数据结构和算法-算法】.md
@@ -1393,6 +1393,82 @@ public int fabocci(int n){
 
 对于一个具体问题，要确定它是否具有贪心选择性质，必须证明每一步所作的贪心选择最终导致问题的整体最优解。
 
+## 1.8 堆算法
+
+### 5.1.1 求二叉树深度
+
+求二叉树深度：
+
+```java
+static class TreeNode {
+    int val;
+    TreeNode left;
+    TreeNode right;
+
+    public TreeNode(int val) {
+        this.val = val;
+    }
+}
+```
+
+```java
+// 递归求深度
+public static int treeDepth(TreeNode root) {
+    if (root == null) {
+        return 0;
+    }
+    // 计算左子树的深度
+    int left = treeDepth(root.left);
+    // 计算右子树的深度
+    int right = treeDepth(root.right);
+    // 树root的深度=路径最长的子树深度 + 1
+    return left >= right ? (left + 1) : (right + 1);
+}
+```
+
+```java
+// 使用队列来实现	
+public int treeDepth2(TreeNode root) {
+    if (root == null) return 0;
+
+    Queue<TreeNode> queue = new LinkedList<>();
+    queue.offer(root);
+    int res = 0, size = 0;
+    while (!queue.isEmpty()) {
+        size = queue.size();
+        while (size > 0) {
+            TreeNode poll = queue.poll();
+            if (poll.left != null) queue.offer(poll.left);
+            if (poll.right != null) queue.offer(poll.right);
+            size--;
+        }
+        res++;
+    }
+    return res;
+}
+```
+
+### 5.1.2 树的遍历
+
+中序遍历：左根右，inorderTraversal。
+
+```java
+public static void inorderTraversal(TreeNode root) {
+    Deque<TreeNode> stack = new LinkedList<TreeNode>();
+    while (!stack.isEmpty() || root != null) {
+        while (root != null) {
+            stack.push(root);
+            root = root.left;
+        }
+        root = stack.pop();
+        System.out.println(root.val);
+        root = root.right;
+    }
+}
+```
+
+前序遍历 (preorder traversal) - 中序遍历 (inorder traversal) - 后序遍历 (postorder traversal)
+
 # 第二章 算法注意事项
 
 result 可以写成ret
