--- a/1-Java基础/1-06【并发1-多线程】.md
+++ b/1-Java基础/1-06【并发1-多线程】.md
@@ -89,32 +89,45 @@
 
 ## 1.3 多线程应用
 
-**异步调用**
+单核 cpu 下，多线程不能实际提高程序运行效率，只是为了能够在不同的任务之间切换，让不同线程轮流使用cpu，不至于一个线程总占用 cpu，别的线程没法干活。
 
-首先来看一下同步和异步的概念：
+多核 cpu 可以并行跑多个线程，但能否提高程序运行效率还是要分情况的
 
-- 需要等待结果返回，才能继续运行就是同步
-- 不需要等待结果返回，就能继续运行就是异步
+* 有些任务经过精心设计，将任务拆分并行执行，当然可以提高程序的运行效率。
+* 也不是所有任务都需要拆分，任务的目的如果不同，谈拆分和效率没啥意义
 
-多线程可以使方法的执行变成异步的，比如说读取磁盘文件时，假设读取操作花费了5秒，如果没有线程的调度机制，这么cpu只能等5秒，啥都不能做。
-
-**提高效率**
-
-这里用的式JMH测试，但是我不会使用。就凉了。之后学一下JMH。直接说结论：
-
-1. 单核 cpu 下，多线程不能实际提高程序运行效率，只是为了能够在不同的任务之间切换，让不同线程轮流使用cpu ，不至于一个线程总占用 cpu，别的线程没法干活
-2. 多核 cpu 可以并行跑多个线程，但能否提高程序运行效率还是要分情况的
-
-     * 有些任务，经过精心设计，将任务拆分，并行执行，当然可以提高程序的运行效率。但不是所有计算任
-       务都能拆分。
-     * 也不是所有任务都需要拆分，任务的目的如果不同，谈拆分和效率没啥意义
-3. IO 操作不占用 cpu，只是我们一般拷贝文件使用的是【阻塞 IO】，这时相当于线程虽然不用 cpu，但需要一直等待 IO 结束，没能充分利用线程。所以才有后面的【非阻塞 IO】和【异步 IO】优化。
+IO 操作不占用 cpu，只是我们一般拷贝文件使用的是【阻塞 IO】，这时相当于线程虽然不用 cpu，但需要一直等待 IO 结束，没能充分利用线程。所以才有后面的【非阻塞 IO】和【异步 IO】优化。
 
 # 第二章 java线程
 
-## 2.1 创建线程三种方法
+Java 程序天生就是多线程程序，我们可以通过 JMX 来看看一个普通的 Java 程序有哪些线程：
 
-### 2.1.1 Thread
+```java
+public static void main(String[] args) {
+    // 获取 Java 线程管理 MXBean
+    ThreadMXBean threadMXBean = ManagementFactory.getThreadMXBean();
+    // 不需要获取同步的 monitor 和 synchronizer 信息，仅获取线程和线程堆栈信息
+    ThreadInfo[] threadInfos = threadMXBean.dumpAllThreads(false, false);
+    // 遍历线程信息，仅打印线程 ID 和线程名称信息
+    for (ThreadInfo threadInfo : threadInfos) {
+        System.out.println("[" + threadInfo.getThreadId() + "] " + threadInfo.getThreadName());
+    }
+}
+// 输出信息如下：
+[5] Attach Listener // 添加事件
+[4] Signal Dispatcher // 分发处理给 JVM 信号的线程
+[3] Finalizer // 调用对象 finalize 方法的线程
+[2] Reference Handler // 清除 reference 线程
+[1] main // main 线程,程序入口
+```
+
+
+
+## 2.1 创建线程方法
+
+一共三种：Thread、Runnable配置Thread、FutureTask配合Thread。
+
+**Thread**
 
 ```java
 // 构造方法的参数是给线程指定名字，推荐给线程起个名字
@@ -128,7 +141,7 @@ Thread t1 = new Thread("t1") {
 t1.start();
 ```
 
-### 2.1.2 Runnable配合Thread
+**Runnable配合Thread**
 
 把【线程】和【任务】（要执行的代码）分开，Thread 代表线程，Runnable 可运行的任务（线程要执行的代码）
 
@@ -149,7 +162,7 @@ t2.start();
 
 通过查看源码可以发现，方法二其实到底还是通过方法一执行的！
 
-### 2.1.3 FutureTask配合Thread
+**FutureTask配合Thread**
 
 这种就是函数式接口的应用。
 
@@ -2178,3 +2191,56 @@ public void transfer(Account target, int amount) {
     }
 }
 ```
+
+## 3.3 线程运行诊断
+
+Linux环境下运行某些程序的时候，可能导致CPU的占用过高，这时需要定位占用CPU过高的线程
+
+```sh
+top # 查看是哪个进程占用CPU过高
+```
+
+```sh
+ps H -eo pid, tid（线程id）, %cpu | grep pid		# 通过ps命令进一步查看是哪个线程占用CPU过高
+```
+
+```sh
+jstack 进程id		# 查看进程中的导致CPU占用过高的线程id，并查看导致CPU占用过高的代码行号；
+```
+
+第三步查看到进程中的线程的nid与刚刚ps命令查看到的tid对比定位，找到出问题的线程id，然后查看行号就可以精准定位错误代码了。
+
+下面的代码就会造成死锁：
+
+```java
+public class JvmStackThreadDeadLock {
+
+    static A a = new A();
+    static B b = new B();
+
+    public static void main(String[] args) {
+
+        new Thread(()->{
+            synchronized (a){
+                try {
+                    Thread.sleep(1000);
+                } catch (InterruptedException e) {
+                    e.printStackTrace();
+                }
+                synchronized (b){
+                    System.out.println("thread1拿到了a和b");
+                }
+            }
+        },"thread1").start();
+
+        new Thread(()->{
+            synchronized (b){
+                synchronized (a){
+                    System.out.println("thread2拿到了a和b");
+                }
+            }
+        },"thread2").start();
+    }
+}
+```
+
