--- a/6-扩展/6-04【数据结构和算法-数据结构】.md
+++ b/6-扩展/6-04【数据结构和算法-数据结构】.md
@@ -533,6 +533,8 @@ B+ 树是 B 树的一种变体：
 1. 如何构造哈希函数
 2. 如何处理冲突。
 
+![](D:\Java\笔记\图片\6-04【数据结构和算法-数据结构】\7-1.png)
+
 ## 6.1 哈希函数的构造方法
 
 构造哈希函数的原则是：①函数本身便于计算；②计算出来的地址分布均匀，即对任一关键字*k*，*f(k)* 对应不同地址的概率相等，目的是尽可能减少冲突。
